--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <button type="button" class="buttons" onclick="OpenCode(3)">Kod 3</button>
                 <button type="button" class="buttons" onclick="OpenWindow(4)">Zadanie 4</button>
                 <button type="button" class="buttons" onclick="OpenCode(4)">Kod 4</button>
-                <button type="button" class="buttons" onclick="Zadanie5()">Kod 5</button>
+                <button type="button" class="buttons" onclick="Zadanie5()">Zadanie 5</button>
             </article>
         </div>
     </body>
